--- a/my_web/templates/my_web/load_more.html
+++ b/my_web/templates/my_web/load_more.html
@@ -123,7 +123,7 @@
                 <label class="username">
                     {{ videos.0.author.nickname }}
                     {% if videos.0.author.uniqueId %}
-                        <a href="https://www.tiktok.com/@{{ videos.0.author.uniqueId }}">@{{ videos.0.author.uniqueId }}</a>
+                        <a href="https://www.tiktok.com/@{{ videos.0.author.uniqueId }}">(@{{ videos.0.author.uniqueId }})</a>
                     {% endif %}
                 </label><br>
                 <label class="city">
