--- a/my_web/templates/my_web/load_more.html
+++ b/my_web/templates/my_web/load_more.html
@@ -94,7 +94,8 @@
             </div>
         </div>
     {% endfor %}
-{% elif videos %}
+{% endif %}
+{% if videos %}
     <div class="col-12 col-lg-12 padding-block-center-box">
         <div class="user box aos-init aos-animate" data-aos="fade-up">
             <div style="float: left;">
