--- a/my_web/templates/my_web/load_more.html
+++ b/my_web/templates/my_web/load_more.html
@@ -108,6 +108,9 @@
                         </video>
                     </div>
                     <p>
+                        <i class="far fa-eye"></i>
+                        {{ videos.0.stats.playCount|num_rounder_custom }}
+                        <br/>
                         {{ videos.0.desc }}
                     </p>
                 </label><br>
