--- a/my_web/templates/my_web/load_more.html
+++ b/my_web/templates/my_web/load_more.html
@@ -119,10 +119,39 @@
                         <br/>
                         <i class="fas fa-share-alt"></i>
                         {{ videos.0.stats.shareCount|num_rounder_custom }}
-                        <br/>
-                        <br/>
+                        <br/><br/>
                         {{ videos.0.desc }}
                     </p>
+                </label><br>
+                <br/><a style="font-size: 12px;" href="{% url 'index_page' %}"><b>awse.us</b></a><br>
+            </div>
+        </div>
+    </div>
+    <div class="col-12 col-lg-12">
+        <div class="user box aos-init aos-animate" data-aos="fade-up">
+            <img style="image-rendering: pixelated;width: 60px;height: 60px;border-radius: 50%;" class="lazyloaded"
+                 data-src="{% url 'imageproxy' %}?data={{ videos.0.music.coverMedium|link_encrypt_img }}&video_mode=1&token={{ token_image_proxy }}&sign={{ user_address_original|sign_address_encrypt }}"
+                 src="{% url 'imageproxy' %}?data={{ videos.0.music.coverMedium|link_encrypt_img }}&video_mode=1&token={{ token_image_proxy }}&sign={{ user_address_original|sign_address_encrypt }}">
+            <div style="width: calc(100% - 90px); float: left; ">
+                <label class="status" data-toggle="tooltip" data-placement="top" data-original-title="1" style="color: 2">
+                    <i class="fas fa-compact-disc"></i>
+                </label>
+                <label class="username">
+                    {{ videos.0.music.title }}
+                </label><br>
+                <label class="city">
+                    {% if not videos.0.music.original %}
+                        <i class="fas fa-user"></i>
+                        <span title="Автор">{{ videos.0.music.authorName }}</span>
+                        <br/>
+                        <i class="fas fa-record-vinyl"></i>
+                        <span title="Альбом">{{ videos.0.music.album }}</span>
+                        <br/>
+                        <i class="far fa-clock"></i>
+                        <span title="Длительность">{{ videos.0.music.duration|seconds_to_time }}</span>
+                        <br/><br/>
+                        <a href="{{ videos.0.music.playUrl }}" target="_blank">Перейти к треку</a>
+                    {% endif %}
                 </label><br>
                 <br/><a style="font-size: 12px;" href="{% url 'index_page' %}"><b>awse.us</b></a><br>
             </div>
