--- a/my_web/templates/my_web/load_more.html
+++ b/my_web/templates/my_web/load_more.html
@@ -137,7 +137,7 @@
                     <i class="fas fa-compact-disc"></i>
                 </label>
                 <label class="username">
-                    {{ videos.0.music.title }}
+                    &nbsp;{{ videos.0.music.title }}
                 </label><br>
                 <label class="city">
                     {% if not videos.0.music.original %}
