--- a/my_web/templates/my_web/load_more.html
+++ b/my_web/templates/my_web/load_more.html
@@ -138,7 +138,7 @@
                      data-src="{% url 'imageproxy' %}?data={{ videos.0.music.coverMedium|link_encrypt_img }}&video_mode=1&token={{ token_image_proxy }}&sign={{ user_address_original|sign_address_encrypt }}"
                      src="{% url 'imageproxy' %}?data={{ videos.0.music.coverMedium|link_encrypt_img }}&video_mode=1&token={{ token_image_proxy }}&sign={{ user_address_original|sign_address_encrypt }}">
                 <div style="width: calc(100% - 90px); float: left; ">
-                    <label class="status" data-toggle="tooltip" data-placement="top" data-original-title="1" style="color: 2">
+                    <label class="status" data-toggle="tooltip" data-placement="top" data-original-title="1">
                         <i class="fas fa-compact-disc"></i>
                     </label>
                     <label class="username">
