--- a/my_web/templates/my_web/load_more.html
+++ b/my_web/templates/my_web/load_more.html
@@ -103,7 +103,7 @@
                 <label class="city">
                     <div clas="video_view_block_aware" style="margin-right: 20px;min-width: 100%;float: left;max-width: 100%;">
                         <video width="100%" controls="controls" class="aware_video_feed_el photohub_item" id="video_player_block_aware"
-                               autoplay="true" loop="loop" style="margin-bottom: 40px;display: block;margin: 0 auto;width: min-content;max-width: 100%;max-height: 80vh;">
+                               autoplay="true" loop="loop" style="display: block;margin: 0 auto;width: min-content;max-width: 100%;max-height: 80vh;margin-bottom: 40px;">
                             <source src="{% url 'imageproxy' %}?data={{ videos.0.video.playAddr|link_encrypt_img }}&token={{ token_image_proxy }}&video_mode=1&sign={{ user_address_original|sign_address_encrypt }}" type="video/mp4;">
                         </video>
                     </div>
