--- a/my_web/templates/my_web/index.html
+++ b/my_web/templates/my_web/index.html
@@ -42,7 +42,7 @@ AWARE Search
                     <div class="user box aos-init aos-animate" data-aos="fade-up">
                         <div style="float: left;">
                             <label class="username">Случайная цитата</label><br>
-                            <label class="city"><i style="font-family: 'Pacifico', cursive;">„{{ add_.text }}“</i><br><br><b style="font-family: 'Pacifico', cursive;">{{ add_.author }}</b></label><br>
+                            <label class="city"><i>„{{ add_.text }}“</i><br><br><b>{{ add_.author }}</b></label><br>
                             <a style="font-size: 12px;" href="{% url 'index_page' %}"><b>awse.us</b></a><br>
                         </div>
                     </div>
@@ -52,7 +52,7 @@ AWARE Search
                     <div class="user box aos-init aos-animate" data-aos="fade-up">
                         <div style="float: left;">
                             <label class="username">Случайный факт</label><br>
-                            <label class="city"><i style="font-family: 'Pacifico', cursive;">{{ add_.text }}</i><br></label><br><br>
+                            <label class="city"><i>{{ add_.text }}</i><br></label><br><br>
                             <a style="font-size: 12px;" href="{% url 'index_page' %}"><b>awse.us</b></a><br>
                         </div>
                     </div>
