--- a/my_web/templates/my_web/awareview.html
+++ b/my_web/templates/my_web/awareview.html
@@ -1,7 +1,7 @@
 {% extends 'my_web/base.html' %}
 
 {% block title %}
-AWARE Search - AWARE Page
+Aware Search - Aware Page
 {% endblock %}
 
 {% block title_header %}
