--- a/my_web/templates/my_web/index.html
+++ b/my_web/templates/my_web/index.html
@@ -1,11 +1,11 @@
 {% extends 'my_web/base.html' %}
 
 {% block title %}
-AWARE Search - Поиск
+Aware Search - Поиск
 {% endblock %}
 
 {% block title_header %}
-AWARE Search
+Aware Search
 {% endblock %}
 
 {% block og_desc %}
