--- a/my_web/templates/my_web/botpage.html
+++ b/my_web/templates/my_web/botpage.html
@@ -1,7 +1,7 @@
 {% extends 'my_web/base.html' %}
 
 {% block title %}
-AWARE Search - Немного о боте
+Aware Search - Немного о боте
 {% endblock %}
 
 {% block og_desc %}
@@ -26,7 +26,7 @@ AWARE
             <div class="user box aos-init aos-animate" data-aos="fade-up">
                 <div style="float: left; ">
 
-                    <label class="username">Бот AWARE в Telegram</label><br>
+                    <label class="username">Бот Aware в Telegram</label><br>
                     <label class="city">
                         Удобная поисковая система прямо в Telegram. Чтобы перейти к боту - нажмите на его псевдоним <a href="https://t.me/AwareSearchBot">@AwareSearchBot</a>.
                     </label><br>
