--- a/my_web/templates/my_web/info.html
+++ b/my_web/templates/my_web/info.html
@@ -1,7 +1,7 @@
 {% extends 'my_web/base.html' %}
 
 {% block title %}
-AWARE Search - Информация
+Aware Search - Информация
 {% endblock %}
 
 {% block title_header %}
