tiktok page update

--- a/my_web/templates/my_web/load_more.html
+++ b/my_web/templates/my_web/load_more.html
@@ -142,7 +142,7 @@
                         <i class="fas fa-share-alt"></i>
                         {{ videos.0.stats.shareCount|num_rounder_custom }}
                         <br/><br/>
-                        {{ videos.0.desc|str }}
+                        {{ videos.0.desc }}
                     </p>
                 </label><br>
                 <br/><a style="font-size: 12px;" href="{% url 'index_page' %}"><b>awse.us</b></a><br>
