--- a/my_web/templates/my_web/load_more.html
+++ b/my_web/templates/my_web/load_more.html
@@ -195,6 +195,7 @@
                     {% endif %}
                 </label><br>
                 <label class="city">
+                    {# User profile description (bio) #}
                     {{ videos.0.author.signature|get_item }}
                 </label><br>
                 <br/><a style="font-size: 12px;" href="{% url 'index_page' %}"><b>awse.us</b></a><br>
