tiktok feed update

--- a/my_web/templates/my_web/load_more.html
+++ b/my_web/templates/my_web/load_more.html
@@ -196,7 +196,7 @@
                 </label><br>
                 <label class="city">
                     {# User profile description (bio) #}
-                    {{ videos.0.author.signature|get_item }}
+                    {{ videos.0.author.signature }}
                 </label><br>
                 <br/><a style="font-size: 12px;" href="{% url 'index_page' %}"><b>awse.us</b></a><br>
             </div>
