--- a/my_web/templates/my_web/base.html
+++ b/my_web/templates/my_web/base.html
@@ -89,14 +89,14 @@
                 </div>
             </div>
         </a>
-        <a href="{% url 'tiktok_page' %}">
-            <div class="menu_item">
-                <label>TikTok</label>
-                <div class="icon_container">
-                    <i class="fab fa-tiktok"></i>
-                </div>
-            </div>
-        </a>
+<!--        <a href="{% url 'tiktok_page' %}">-->
+<!--            <div class="menu_item">-->
+<!--                <label>TikTok</label>-->
+<!--                <div class="icon_container">-->
+<!--                    <i class="fab fa-tiktok"></i>-->
+<!--                </div>-->
+<!--            </div>-->
+<!--        </a>-->
         <a href="{% url 'namaz_page' %}">
             <div class="menu_item">
                 <label>Намаз</label>
