--- a/my_web/templates/my_web/load_more.html
+++ b/my_web/templates/my_web/load_more.html
@@ -211,7 +211,7 @@
                         <div style="float: left;">
                             <label class="username">{{ el.0.0 }}</label><br>
                             <label class="city">
-                                {# paste news image #}
+                                {# paste news image or text if this is a mobile device #}
                                 {% if not mobile %}
                                     <img src="{% url 'image_generate_api' %}?text={{ el.0.1 }}&author={{ el.0.2 }}"
                                              class="photohub_item" onerror="imgError(this);" style="width:100%;margin-top: 3%;" alt="Обложка новостного блока">
