--- a/my_web/templates/my_web/base.html
+++ b/my_web/templates/my_web/base.html
@@ -54,13 +54,12 @@
             }
 
             body{
-              background: #644bff;
               padding: 0 20px;
             }
 
             ::selection{
               color: #fff;
-              background: #664AFF;
+              background: #969696;
             }
 
             .wrapper{
@@ -71,7 +70,7 @@
             .wrapper .search-input{
               background: #fff;
               width: 100%;
-              border-radius: 5px;
+              border-radius: 45px;
               position: relative;
               box-shadow: 0px 1px 5px 3px rgba(0,0,0,0.12);
             }
@@ -81,7 +80,7 @@
               width: 100%;
               outline: none;
               border: none;
-              border-radius: 5px;
+              border-radius: 45px;
               padding: 0 60px 0 20px;
               font-size: 18px;
               box-shadow: 0px 1px 5px rgba(0,0,0,0.1);
@@ -130,7 +129,7 @@
               text-align: center;
               line-height: 55px;
               font-size: 20px;
-              color: #644bff;
+              color: #202124;
               cursor: pointer;
             }
         </style>
