--- a/my_web/templates/my_web/base.html
+++ b/my_web/templates/my_web/base.html
@@ -45,7 +45,6 @@
 
         {# Search styles #}
         <style>
-            @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700&display=swap');
             *{
               margin: 0;
               padding: 0;
@@ -81,6 +80,7 @@
               outline: none;
               border: none;
               border-radius: 45px;
+              color: #3a3a3a;
               padding: 0 60px 0 20px;
               font-size: 18px;
               box-shadow: 0px 1px 5px rgba(0,0,0,0.1);
