--- a/my_web/templates/my_web/base.html
+++ b/my_web/templates/my_web/base.html
@@ -46,25 +46,25 @@
 <!--        </script>-->
 
         {# Scrollbar styles #}
-        <style>
-            ::-webkit-scrollbar {
-                width: 15px;
-            }
+<!--        <style>-->
+<!--            ::-webkit-scrollbar {-->
+<!--                width: 15px;-->
+<!--            }-->
 
-            ::-webkit-scrollbar-track {
-                background: #191919;
-            }
+<!--            ::-webkit-scrollbar-track {-->
+<!--                background: #191919;-->
+<!--            }-->
 
-            ::-webkit-scrollbar-thumb {
-                background: #939393;
-                border-radius: 8px;
-                border: 4px solid #191919;
-            }
+<!--            ::-webkit-scrollbar-thumb {-->
+<!--                background: #939393;-->
+<!--                border-radius: 8px;-->
+<!--                border: 4px solid #191919;-->
+<!--            }-->
 
-            ::-webkit-scrollbar-thumb:hover {
-                background: #7c7c7c;
-            }
-        </style>
+<!--            ::-webkit-scrollbar-thumb:hover {-->
+<!--                background: #7c7c7c;-->
+<!--            }-->
+<!--        </style>-->
 
         {# Search styles #}
         <style>
