--- a/my_web/templates/my_web/base.html
+++ b/my_web/templates/my_web/base.html
@@ -182,7 +182,7 @@
             <i class="fas fa-home"></i>
         </a>
         <div class="header_content">
-            <label class="header_title">{% block title_header %}{% endblock %}</label>
+            <label class="header_title" style="font-family: 'Pacifico', cursive;">{% block title_header %}{% endblock %}</label>
         </div>
         <div class="dropdowncustom1">
             <i class="fas fa-compass" onclick="onMenuClicked()"></i>
