--- a/my_web/templates/my_web/load_more.html
+++ b/my_web/templates/my_web/load_more.html
@@ -78,7 +78,10 @@
         <div class="col-12 col-lg-12 padding-block-center-box">
             <div class="user box aos-init aos-animate" data-aos="fade-up">
                 <div style="float: left;">
-                    <label class="username"><a href="{% url 'news_page' %}">Новости от AWARE</a></label><br>
+                    <label class="username"><a href="{% url 'news_page' %}"
+                                               style="background: #fff;border-radius: 8px;padding: 5%;">
+                        Новости от AWARE</a>
+                    </label><br>
                     <label class="city"><i>Подборка новостей на сегодня от AWARE</i></label><br>
                     <br/><a style="font-size: 12px;" href="{% url 'index_page' %}"><b>awse.us</b></a><br>
                 </div>
@@ -242,7 +245,10 @@
             <div class="col-12 col-lg-12 padding-block-center-box">
                 <div class="user box aos-init aos-animate" data-aos="fade-up">
                     <div style="float: left;">
-                        <label class="username"><a target="_blank" href="{{ el.1.link }}">{{ el.1.title }}</a></label><br>
+                        <label class="username"><a target="_blank" href="{{ el.1.link }}"
+                            style="background: #fff;border-radius: 8px;padding: 5%;">
+                            {{ el.1.title }}</a>
+                        </label><br>
                         <label class="city">
                             <p>{{ el.1.displayLink }}</p>
                             <i>{{ el.1.snippet }}</i>
