--- a/my_web/templates/my_web/error.html
+++ b/my_web/templates/my_web/error.html
@@ -1,7 +1,7 @@
 {% extends 'my_web/base.html' %}
 
 {% block title %}
-Aware Search - Что-то пошло не так... Сервер сломался наверное...
+Aware - Что-то пошло не так... Сервер сломался наверное...
 {% endblock %}
 
 {% block og_desc %}
