--- a/my_web/templates/my_web/index.html
+++ b/my_web/templates/my_web/index.html
@@ -1,11 +1,11 @@
 {% extends 'my_web/base.html' %}
 
 {% block title %}
-Aware Search - Поиск
+Aware - Поиск
 {% endblock %}
 
 {% block title_header %}
-Aware Search
+Aware
 {% endblock %}
 
 {% block og_desc %}
