--- a/my_web/templates/my_web/namaz.html
+++ b/my_web/templates/my_web/namaz.html
@@ -1,11 +1,11 @@
 {% extends 'my_web/base.html' %}
 
 {% block title %}
-Aware Search - Время Намаза в разных городах
+Aware - Время Намаза в разных городах
 {% endblock %}
 
 {% block title_header %}
-Aware Search
+Aware
 {% endblock %}
 
 {% block og_desc %}
