--- a/my_web/templates/my_web/awareview.html
+++ b/my_web/templates/my_web/awareview.html
@@ -1,7 +1,7 @@
 {% extends 'my_web/base.html' %}
 
 {% block title %}
-Aware Search - Aware Page
+Aware - Aware Page
 {% endblock %}
 
 {% block title_header %}
