--- a/my_web/templates/my_web/botpage.html
+++ b/my_web/templates/my_web/botpage.html
@@ -1,7 +1,7 @@
 {% extends 'my_web/base.html' %}
 
 {% block title %}
-Aware Search - Немного о боте
+Aware - Немного о боте
 {% endblock %}
 
 {% block og_desc %}
