--- a/my_web/templates/my_web/tiktok.html
+++ b/my_web/templates/my_web/tiktok.html
@@ -1,7 +1,7 @@
 {% extends 'my_web/base.html' %}
 
 {% block title %}
-Aware Search - TikTok Feed
+Aware - TikTok Feed
 {% endblock %}
 
 {% block title_header %}
