--- a/my_web/templates/my_web/load_more.html
+++ b/my_web/templates/my_web/load_more.html
@@ -79,10 +79,7 @@
             <div class="user box aos-init aos-animate" data-aos="fade-up">
                 <div style="float: left;">
                     <label class="username"><a href="{% url 'news_page' %}"
-                                               style="
-                                               {background: #fff;border-radius: 8px;padding: .3em}
-                                               :hover {color: #272727}
-">
+                                               style="background: #fff;border-radius: 8px;padding: .3em">
                         Новости от AWARE</a>
                     </label><br>
                     <label class="city"><i>Подборка новостей на сегодня от AWARE</i></label><br>
