--- a/my_web/templates/my_web/index.html
+++ b/my_web/templates/my_web/index.html
@@ -1,11 +1,11 @@
 {% extends 'my_web/base.html' %}
 
 {% block title %}
-Aware - Поиск
+AWARE - Поиск
 {% endblock %}
 
 {% block title_header %}
-Aware
+AWARE
 {% endblock %}
 
 {% block og_desc %}
