--- a/my_web/templates/my_web/news-feed.html
+++ b/my_web/templates/my_web/news-feed.html
@@ -1,7 +1,7 @@
 {% extends 'my_web/base.html' %}
 
 {% block title %}
-Aware - Новостная лента
+AWARE - Новостная лента
 {% endblock %}
 
 {% block title_header %}
