--- a/my_web/templates/my_web/error.html
+++ b/my_web/templates/my_web/error.html
@@ -1,7 +1,7 @@
 {% extends 'my_web/base.html' %}
 
 {% block title %}
-Aware - Что-то пошло не так... Сервер сломался наверное...
+AWARE - Что-то пошло не так... Сервер сломался наверное...
 {% endblock %}
 
 {% block og_desc %}
