--- a/my_web/templates/my_web/status.html
+++ b/my_web/templates/my_web/status.html
@@ -1,7 +1,7 @@
 {% extends 'my_web/base.html' %}
 
 {% block title %}
-Aware - Статус и история доступности AWARE
+AWARE - Статус и история доступности AWARE
 {% endblock %}
 
 {% block title_header %}
