--- a/my_web/templates/my_web/index.html
+++ b/my_web/templates/my_web/index.html
@@ -23,6 +23,8 @@ AWARE
 {% block content %}
 {% load static %}
     <div style="display: block;margin-left: auto;margin-right: auto;border-radius: 20%;">
+        <div class="advertise-aware-block">
+        </div>
         <div class="search-aware-block-global">
             <div class="wrapper" style="margin-bottom: 5%;">
                 <div class="search-input" style="z-index: 106;">
