--- a/my_web/static/my_web/css/main_page.css
+++ b/my_web/static/my_web/css/main_page.css
@@ -24,10 +24,13 @@
 
     a {
         color: #565656;
+        background: #fff;
+        border-radius: 5px;
+        padding: 0.17em;
     }
 
     a:hover {
-        color: #000;
+        color: #151515;
     }
 
     *:focus {
