--- a/my_web/static/my_web/css/main_page.css
+++ b/my_web/static/my_web/css/main_page.css
@@ -24,13 +24,10 @@
 
     a {
         color: #565656;
-        background: #fff;
-        border-radius: 5px;
-        padding: 0.17em;
     }
 
     a:hover {
-        color: #151515;
+        color: #1f1f1f;
     }
 
     *:focus {
