--- a/my_web/templates/my_web/load_more.html
+++ b/my_web/templates/my_web/load_more.html
@@ -78,7 +78,8 @@
         <div class="col-12 col-lg-12 padding-block-center-box">
             <div class="user box aos-init aos-animate" data-aos="fade-up">
                 <div style="float: left;">
-                    <label class="username"><a href="{% url 'news_page' %}">
+                    <label class="username"><a href="{% url 'news_page' %}"
+                    style="background: #fff;border-radius: 5px;padding: 0.17em">
                         Новости от AWARE</a>
                     </label><br>
                     <label class="city"><i>Подборка новостей на сегодня от AWARE</i></label><br>
@@ -244,7 +245,8 @@
             <div class="col-12 col-lg-12 padding-block-center-box">
                 <div class="user box aos-init aos-animate" data-aos="fade-up">
                     <div style="float: left;">
-                        <label class="username"><a target="_blank" href="{{ el.1.link }}">
+                        <label class="username"><a target="_blank" href="{{ el.1.link }}"
+                        style="background: #fff;border-radius: 5px;padding: 0.17em">
                             {{ el.1.title }}</a>
                         </label><br>
                         <label class="city">
